--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/SabrinaSzemberg/testeHeroku#readme",
   "dependencies": {
+    "cool-ascii-faces": "^1.3.4",
     "express": "^4.18.1",
     "heroku": "^7.33.3"
   },
